# demon-docs

./: .docignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  HACKATHON.md  Makefile  NOTICE  README.md  SECURITY.md  demon-docs.toml  go.mod  go.sum  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
doc_ledger/: __init__.py  __main__.py  cli.py  config.py  parent_index.py  path_format.py  readme_io.py  reconcile.py  scan.py  watch.py
docs/: !README.md  INDEX.md  README.md  agent-context-and-integrations.md  code-dependency-and-entanglement.md  code-symbol-references.md  codemap-algorithm-development-log.md  codemap-evidence.md  codemap-suggestion-algorithm.md  configuration.md  context-injection-benchmarking.md  document-refactoring.md  documentation-policy.md  documentation-procedure.md  link-performance.md  markdown-links.md  reconciliation-model.md  repository-demon.md  repository-graph.md  reverse-indexes.md  review-ledger.md  roadmap.md  testing-and-fixtures.md  watcher-and-automation.md
docs_index/: __init__.py  cli.py  model.py  parent_index.py  paths.py  readme_io.py  reconcile.py  scan.py  watch.py
research/: benchmark_space_rocks_mass_rename.py  run_space_rocks_mass_rename.py
tests/: cli_parity_test.go  parity_fixtures_test.go  parity_test.go  regression_fixtures_test.go  regression_test.go  test_cli.py  test_config.py  test_end_to_end.py  test_packaging.py  test_parent_index.py  test_path_format.py  test_paths.py  test_public_config_end_to_end.py  test_readme_io.py  test_reconcile.py  test_scan.py  test_watch.py
(+668 files in other folders)
