[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-ledger"
version = "0.1.1"
description = "Legacy Python reference implementation for doc-ledger."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Brian Fernstrom" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["documentation", "index", "filesystem", "cli"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "tomlkit",
  "watchdog",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["doc_ledger*"]
